package com.cjj.designpattern.behavioral.iterator;

/**
 * Created by chenjj on 2018/12/19
 */
public interface Aggregate {
    public abstract Iterator iterator();
}
