package com.cjj.designpattern.behavioral.iterator;

/**
 * Created by chenjj on 2018/12/19
 */
public class Book {
    private String name;
    public Book(String name){
        this.name=name;
    }

    public String getName(){
        return name;
    }
}
